tests/http/requests/invalid/nonascii_02.py
from web_server.config import MessageConfig
from web_server.errors import InvalidRequestMethod

cfg = MessageConfig.default()
request = InvalidRequestMethod
